--- a/H1N1_and_seasonal_flu_vaccines_prediction.ipynb
+++ b/H1N1_and_seasonal_flu_vaccines_prediction.ipynb
@@ -8782,12 +8782,12 @@
    "metadata": {},
    "source": [
     "##### Summary of all the tuned models using an ROC curve:\n",
-    "1. Logistic Regression - \n",
-    "2. Decision Tree - \n",
-    "3. KNN -  -\n",
-    "4. Naive Bayes -\n",
-    "5. Random Forest - \n",
-    "6. XGBoost - \n"
+    "1. Logistic Regression - **0.7735**\n",
+    "2. Decision Tree - **0.7814**\n",
+    "3. KNN - **0.7811**\n",
+    "4. Naive Bayes - **0.7528**\n",
+    "5. Random Forest - **0.8288**\n",
+    "6. XGBoost - **0.8405**\n"
    ]
   },
   {
@@ -8827,7 +8827,8 @@
    "id": "64d6cc82-6bf4-4cdf-a6f3-bc25749e8717",
    "metadata": {},
    "source": [
-    "### The best model for predicting vaccine uptake:"
+    "### The best model for predicting vaccine uptake:\n",
+    "- XGBoost is therefore our **best and final model** with the best Accuracy of **0.8405**, as compared to all other models"
    ]
   },
   {
@@ -9114,7 +9115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
